perf: implement text input field

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,15 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="index.css" />
     <title>Demo</title>
-    <style></style>
+    <style>
+      .blockly-field-text {
+        white-space: pre;
+      }
+
+      .blockly-field-text * {
+        white-space: pre;
+      }
+    </style>
   </head>
   <body>
     <div id="app"></div>
