--- a/example/Area.html
+++ b/example/Area.html
@@ -7,9 +7,14 @@
     <title>Document</title>
   </head>
   <body>
+    <div id="app"></div>
     <script src="../build/blocks-program.browser.min.js"></script>
     <script>
-      console.log(BlocksProgram)
+      const svg = new BlocksProgram.SVG(600, 400)
+      svg.mount(document.getElementById('app'))
+      const area = new BlocksProgram.Area(600, 400)
+
+      area.render(svg)
     </script>
   </body>
 </html>
