--- a/example/Area.html
+++ b/example/Area.html
@@ -5,6 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
+    <style>
+      * {
+        margin: 0;
+        padding: 0;
+      }
+
+      #app {
+        width: fit-content;
+        margin: 50px auto;
+        box-shadow: 0 0 10px #757575;
+        line-height: 0;
+      }
+
+      .s_area_background {
+        fill: white;
+      }
+
+      .s_scroll_background {
+        fill: lightblue;
+      }
+
+      .s_scroll_bar {
+        fill: blue;
+      }
+    </style>
   </head>
   <body>
     <div id="app"></div>
