perf: Use class style instead of inline style.

--- a/example/Workspace.html
+++ b/example/Workspace.html
@@ -45,6 +45,14 @@
         fill: #6dcbf7;
         stroke: #98c7f0;
       }
+
+      .s_dragger {
+        cursor: grab;
+      }
+
+      .s_dragger_dragging {
+        cursor: grabbing;
+      }
     </style>
   </head>
   <body>
