--- a/example/Block.html
+++ b/example/Block.html
@@ -69,6 +69,7 @@
       workspace.definedBlocks.add(createBlock({}, 'p-n'))
       workspace.definedBlocks.add(createBlock({ previous: false }, 'n'))
       workspace.definedBlocks.add(createBlock({ next: false }, 'p'))
+      workspace.definedBlocks.add(createBlock({ next: false, previous: false }, 'none'))
       const renderer = new BlocksProgram.Renderer(workspace, 600, 400)
 
       renderer.mount(document.getElementById('app'))
@@ -76,6 +77,7 @@
       renderer.workspaceSVG.addBlock('n', 100, 50)
       renderer.workspaceSVG.addBlock('p-n', 100, 100)
       renderer.workspaceSVG.addBlock('p', 100, 150)
+      renderer.workspaceSVG.addBlock('none', 100, 200)
 
       function createBlock(opt = {}, id) {
         const block = new BlocksProgram.Block(opt, id)
