--- a/example/Block.html
+++ b/example/Block.html
@@ -53,6 +53,10 @@
       .s_dragger_dragging {
         cursor: grabbing;
       }
+
+      .s_conn_active .s_block_background {
+        stroke: red;
+      }
     </style>
   </head>
   <body>
@@ -74,10 +78,10 @@
 
       renderer.mount(document.getElementById('app'))
 
-      renderer.workspaceSVG.addBlock('n', 100, 50)
-      renderer.workspaceSVG.addBlock('p-n', 100, 100)
-      renderer.workspaceSVG.addBlock('p', 100, 150)
-      renderer.workspaceSVG.addBlock('none', 100, 200)
+      renderer.$w.addBlock('n', 100, 50)
+      renderer.$w.addBlock('p-n', 100, 100)
+      renderer.$w.addBlock('p', 100, 150)
+      renderer.$w.addBlock('none', 100, 200)
 
       function createBlock(opt = {}, id) {
         const block = new BlocksProgram.Block(opt, id)
