--- a/example/Block.html
+++ b/example/Block.html
@@ -74,6 +74,8 @@
       workspace.definedBlocks.add(createBlock({ previous: false }, 'n'))
       workspace.definedBlocks.add(createBlock({ next: false }, 'p'))
       workspace.definedBlocks.add(createBlock({ next: false, previous: false }, 'none'))
+
+      workspace.definedBlocks.add(createSlotBlock({ next: true, previous: true }, 'slot-p-n'))
       const renderer = new BlocksProgram.Renderer(workspace, 600, 400)
 
       renderer.mount(document.getElementById('app'))
@@ -82,6 +84,8 @@
       renderer.$w.addBlock('p-n', 100, 100)
       renderer.$w.addBlock('p', 100, 150)
       renderer.$w.addBlock('none', 100, 200)
+
+      renderer.$w.addBlock('slot-p-n', 300, 50)
 
       function createBlock(opt = {}, id) {
         const block = new BlocksProgram.Block(opt, id)
@@ -92,6 +96,17 @@
         block.pushField(field)
         block.pushField(field1)
         block.pushField(field2)
+
+        return block
+      }
+
+      function createSlotBlock(opt = {}, id) {
+        const block = new BlocksProgram.Block(opt, id)
+        const slotField = new BlocksProgram.BlockSlotField('arg1')
+        const field = new BlocksProgram.BlockTextField('arg', id)
+
+        block.pushField(field)
+        block.pushField(slotField, 1)
 
         return block
       }
