fix: Fixed update shape when slot blocks changed.

--- a/example/Block.html
+++ b/example/Block.html
@@ -86,6 +86,8 @@
       renderer.$w.addBlock('none', 100, 200)
 
       renderer.$w.addBlock('slot-p-n', 300, 50)
+      renderer.$w.addBlock('slot-p-n', 300, 150)
+      renderer.$w.addBlock('slot-p-n', 300, 250)
 
       function createBlock(opt = {}, id) {
         const block = new BlocksProgram.Block(opt, id)
