--- a/example/BlockConnection.html
+++ b/example/BlockConnection.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Workspace</title>
+    <title>Block Connection</title>
     <style>
       * {
         margin: 0;
@@ -75,14 +75,21 @@
       workspace.definedBlocks.add(createBlock({ next: false }, 'p'))
       workspace.definedBlocks.add(createBlock({ next: false, previous: false }, 'none'))
 
+      workspace.definedBlocks.add(createSlotBlock({ next: true, previous: true }, 'slot-p-n'))
+      workspace.definedBlocks.add(createSlotBlock({ next: true, previous: true }, 'slot-p-n1'))
+      workspace.definedBlocks.add(createSlotBlock({ next: true, previous: true }, 'slot-p-n2'))
       const renderer = new BlocksProgram.Renderer(workspace, 600, 400)
 
       renderer.mount(document.getElementById('app'))
 
       renderer.$w.addBlock('n', 100, 50)
       renderer.$w.addBlock('p-n', 100, 100)
+      renderer.$w.addBlock('p-n', 100, 100)
       renderer.$w.addBlock('p', 100, 150)
-      renderer.$w.addBlock('none', 100, 200)
+
+      renderer.$w.addBlock('slot-p-n', 300, 50)
+      renderer.$w.addBlock('slot-p-n1', 300, 150)
+      renderer.$w.addBlock('slot-p-n2', 300, 250)
 
       function createBlock(opt = {}, id) {
         const block = new BlocksProgram.Block(opt, id)
@@ -93,6 +100,17 @@
         block.pushField(field)
         block.pushField(field1)
         block.pushField(field2)
+
+        return block
+      }
+
+      function createSlotBlock(opt = {}, id) {
+        const block = new BlocksProgram.Block(opt, id)
+        const slotField = new BlocksProgram.BlockSlotField('arg1')
+        const field = new BlocksProgram.BlockTextField('arg', id)
+
+        block.pushField(field)
+        block.pushField(slotField, 1)
 
         return block
       }
