perf: Add debug connection rect

--- a/example/BlockConnection.html
+++ b/example/BlockConnection.html
@@ -57,6 +57,13 @@
       .s_conn_active .s_block_background {
         stroke: red;
       }
+
+      .s_debug_dot {
+        fill: red;
+      }
+      .s_debug_dot[target='true'] {
+        fill: green;
+      }
     </style>
   </head>
   <body>
