perf: Update debug style

--- a/example/BlockConnection.html
+++ b/example/BlockConnection.html
@@ -67,7 +67,7 @@
       }
 
       .s_block_selected .s_block_background {
-        stroke: black;
+        stroke: lightslategray;
       }
     </style>
   </head>
