--- a/example/BlockMultiFields.html
+++ b/example/BlockMultiFields.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Block</title>
+    <title>Block Multi Fields</title>
     <style>
       * {
         margin: 0;
@@ -57,6 +57,18 @@
       .s_conn_active .s_block_background {
         stroke: red;
       }
+
+      .s_debug_dot {
+        fill: red;
+      }
+
+      .s_debug_dot[target='true'] {
+        fill: green;
+      }
+
+      .s_block_selected .s_block_background {
+        stroke: lightslategray;
+      }
     </style>
   </head>
   <body>
@@ -66,33 +78,46 @@
     <script>
       const workspace = new BlocksProgram.Workspace()
 
-      const block = new BlocksProgram.Block(null, 'p-n')
-      const field = new BlocksProgram.BlockTextField('arg', 'hello')
-      block.pushField(field)
-
       workspace.definedBlocks.add(createBlock({}, 'p-n'))
       workspace.definedBlocks.add(createBlock({ previous: false }, 'n'))
       workspace.definedBlocks.add(createBlock({ next: false }, 'p'))
       workspace.definedBlocks.add(createBlock({ next: false, previous: false }, 'none'))
 
+      // workspace.definedBlocks.add(createSlotBlock({ next: true, previous: true }, 'slot-p-n'))
+      // workspace.definedBlocks.add(createSlotBlock({ next: true, previous: true }, 'slot-p-n1'))
+      // workspace.definedBlocks.add(createSlotBlock({ next: true, previous: true }, 'slot-p-n2'))
       const renderer = new BlocksProgram.Renderer(workspace, 600, 400)
 
       renderer.mount(document.getElementById('app'))
 
-      renderer.$w.addBlock('n', 100, 50)
+      renderer.$w.addBlock('p-n', 100, 50)
       renderer.$w.addBlock('p-n', 100, 100)
-      renderer.$w.addBlock('p', 100, 150)
-      renderer.$w.addBlock('none', 100, 200)
+      renderer.$w.addBlock('p-n', 100, 150)
+
+      // renderer.$w.addBlock('slot-p-n', 300, 50)
+      // renderer.$w.addBlock('slot-p-n1', 300, 150)
+      // renderer.$w.addBlock('slot-p-n2', 300, 250)
 
       function createBlock(opt = {}, id) {
         const block = new BlocksProgram.Block(opt, id)
 
-        const field = new BlocksProgram.BlockTextField('arg', 'hello')
-        const field1 = new BlocksProgram.BlockTextField('arg', 'world')
+        const field = new BlocksProgram.BlockTextField('text1', 'hello')
+        const field1 = new BlocksProgram.BlockTextField('text2', 'world')
         const field2 = new BlocksProgram.BlockTextField('arg', id)
         block.pushField(field)
         block.pushField(field1)
-        block.pushField(field2)
+        block.pushField(field2, 1)
+
+        return block
+      }
+
+      function createSlotBlock(opt = {}, id) {
+        const block = new BlocksProgram.Block(opt, id)
+        const slotField = new BlocksProgram.BlockSlotField('arg1')
+        const field = new BlocksProgram.BlockTextField('arg', id)
+
+        block.pushField(field)
+        block.pushField(slotField, 1)
 
         return block
       }
