refactor: Extract common css

--- a/example/Workspace.html
+++ b/example/Workspace.html
@@ -5,55 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Workspace</title>
-    <style>
-      * {
-        margin: 0;
-        padding: 0;
-        user-select: none;
-      }
-
-      #app {
-        width: fit-content;
-        margin: 50px auto;
-        box-shadow: 0 0 10px #757575;
-        line-height: 0;
-      }
-
-      .s_area_background {
-        fill: white;
-      }
-
-      .s_scroll_background {
-        fill: lightblue;
-      }
-
-      .s_scroll_bar {
-        fill: blue;
-      }
-
-      .s_scroll_disabled > .s_scroll_bar {
-        fill: gray;
-      }
-
-      .s_pattern_grid {
-        fill: #f9f9f9;
-        stroke: #eeeeee;
-        stroke-width: 1px;
-      }
-
-      .s_block_background {
-        fill: #6dcbf7;
-        stroke: #98c7f0;
-      }
-
-      .s_dragger {
-        cursor: grab;
-      }
-
-      .s_dragger_dragging {
-        cursor: grabbing;
-      }
-    </style>
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <div id="app"></div>
