perf: add style preprocessor

--- a/example/Area.html
+++ b/example/Area.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Area</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet/less" type="text/css" href="./styles.less" />
   </head>
   <body>
     <div id="app"></div>
     <p>double click to add rect</p>
+    <script src="https://cdn.bootcss.com/less.js/3.10.3/less.min.js"></script>
     <script src="../build/blocks-program.browser.min.js"></script>
     <script>
       const svg = new BlocksProgram.SVG(600, 400)
