--- a/example/Block.html
+++ b/example/Block.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Block</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet/less" type="text/css" href="./styles.less" />
   </head>
   <body>
     <div id="app"></div>
-    <script src="../build/blocks-program.browser.min.js"></script>
+    <script src="https://cdn.bootcss.com/less.js/3.10.3/less.min.js"></script>
     <script src="https://cdn.bootcss.com/dat-gui/0.7.6/dat.gui.js"></script>
+    <script src="../build/blocks-program.browser.min.js"></script>
     <script>
       const workspace = new BlocksProgram.Workspace()
 
