chore: update cdn

--- a/example/Area.html
+++ b/example/Area.html
@@ -10,7 +10,7 @@
   <body>
     <div id="app"></div>
     <p>double click to add rect</p>
-    <script src="https://cdn.bootcss.com/less.js/3.10.3/less.min.js"></script>
+    <script src="https://cdn.staticfile.org/less.js/3.11.1/less.min.js"></script>
     <script src="../build/blocks-program.browser.min.js"></script>
     <script>
       const svg = new BlocksProgram.SVG(600, 400)
