--- a/example/BlockMultiFields.html
+++ b/example/BlockMultiFields.html
@@ -9,8 +9,8 @@
   </head>
   <body>
     <div id="app"></div>
-    <script src="https://cdn.bootcss.com/less.js/3.10.3/less.min.js"></script>
-    <script src="https://cdn.bootcss.com/dat-gui/0.7.6/dat.gui.js"></script>
+    <script src="https://cdn.staticfile.org/less.js/3.11.1/less.min.js"></script>
+    <script src="https://cdn.staticfile.org/dat-gui/0.7.6/dat.gui.min.js"></script>
     <script src="../build/blocks-program.browser.min.js"></script>
     <script>
       const workspace = new BlocksProgram.Workspace()
