--- a/example/BlockMultiFields.html
+++ b/example/BlockMultiFields.html
@@ -13,27 +13,29 @@
     <script src="https://cdn.staticfile.org/dat-gui/0.7.6/dat.gui.min.js"></script>
     <script src="../build/blocks-program.browser.min.js"></script>
     <script>
-      const workspace = new BlocksProgram.Workspace()
+      window.onload = () => {
+        const workspace = new BlocksProgram.Workspace()
 
-      workspace.definedBlocks.add(createBlock({}, 'p-n'))
-      workspace.definedBlocks.add(createBlock({ previous: false }, 'n'))
-      workspace.definedBlocks.add(createBlock({ next: false }, 'p'))
-      workspace.definedBlocks.add(createBlock({ next: false, previous: false }, 'none'))
+        workspace.definedBlocks.add(createBlock({}, 'p-n'))
+        workspace.definedBlocks.add(createBlock({ previous: false }, 'n'))
+        workspace.definedBlocks.add(createBlock({ next: false }, 'p'))
+        workspace.definedBlocks.add(createBlock({ next: false, previous: false }, 'none'))
 
-      workspace.definedBlocks.add(createSlotBlock({ next: true, previous: true }, 'slot-p-n'))
-      workspace.definedBlocks.add(createSlotBlock({ next: true, previous: true }, 'slot-p-n1'))
-      workspace.definedBlocks.add(createSlotBlock({ next: true, previous: true }, 'slot-p-n2'))
-      const renderer = new BlocksProgram.Renderer(workspace, 600, 400)
+        workspace.definedBlocks.add(createSlotBlock({ next: true, previous: true }, 'slot-p-n'))
+        workspace.definedBlocks.add(createSlotBlock({ next: true, previous: true }, 'slot-p-n1'))
+        workspace.definedBlocks.add(createSlotBlock({ next: true, previous: true }, 'slot-p-n2'))
+        const renderer = new BlocksProgram.Renderer(workspace, 600, 400)
 
-      renderer.mount(document.getElementById('app'))
+        renderer.mount(document.getElementById('app'))
 
-      renderer.$w.addBlock('p-n', 100, 50)
-      renderer.$w.addBlock('n', 100, 150)
-      renderer.$w.addBlock('p', 100, 250)
+        renderer.$w.addBlock('p-n', 100, 50)
+        renderer.$w.addBlock('n', 100, 150)
+        renderer.$w.addBlock('p', 100, 250)
 
-      renderer.$w.addBlock('slot-p-n', 300, 50)
-      // renderer.$w.addBlock('slot-p-n1', 300, 150)
-      // renderer.$w.addBlock('slot-p-n2', 300, 250)
+        renderer.$w.addBlock('slot-p-n', 300, 50)
+        // renderer.$w.addBlock('slot-p-n1', 300, 150)
+        // renderer.$w.addBlock('slot-p-n2', 300, 250)
+      }
 
       function createBlock(opt = {}, id) {
         const block = new BlocksProgram.Block(opt, id)
