chore: 整理 playground 代码

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <div id="app"></div>
-    <script src="./src/entry.ts" type="module"></script>
+    <script src="./playground/entry.ts" type="module"></script>
   </body>
 </html>
